# hippomenes

hdl/src/core/: csr_block.sv
rtic5/: Cargo.toml
rust_examples/: Cargo.toml  text.mem
rust_examples/examples/: rust_mpu.rs  uart_rtic.rs
