[package]
name = "hippomenes_rust_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# crate_type = ["staticlib"]

[dependencies]
#hippomenes-hal = {path="../../hippomenes-core/hippomenes-hal/"}
hippomenes-hal = { git = "https://github.com/onsdagens/hippomenes-core", branch = "mpu" }
#hippomenes-core = {path="../../hippomenes-core/"}
hippomenes-core = { git = "https://github.com/onsdagens/hippomenes-core", branch = "mpu" }
#hippomenes-rt = {path="../../hippomenes-core/hippomenes-rt/"}
hippomenes-rt = { git = "https://github.com/onsdagens/hippomenes-core", branch = "mpu" }
#rtic = {path = "../../rtic/rtic/", features=["riscv-clic-backend"]}
rtic = { git = "https://github.com/onsdagens/rtic", branch = "mpu", features = [
    "riscv-clic-backend",
] }
layout-derive = { git = "https://github.com/perlindgren/layout-derive" }
layout-trait = { git = "https://github.com/perlindgren/layout-trait" }
heapless = "0.7.16"
